@@ -1,5 +1,13 @@
 2007-01-31 Richard Frith-Macdonald <rfm@gnu.org>
 
+	* Source\winlib\WIN32FontInfo.m:
+	* Source\winlib\GNUmakefile.preamble:
+	* Source\win32\GNUmakefile.preamble:
+	* Headers\winlib\WIN32FontInfo.h:
+	Implement number of glyphs and covered characterset.
+
+2007-01-31 Richard Frith-Macdonald <rfm@gnu.org>
+
 	* Source/art/ftfont.m: Implement methods to get count of characters
 	and characterset based on code by Yen-Ju Chen
 	* Source/cairo/CairoFontEnumerator.m: Tidy layout
